# Nilotica

./: .codeaskdata  1_run_market_gateway.bat  2_run_order_gateway.bat  3_run_strategy_subscriber.bat  4_run_risk_manager.bat  5_run_data_recorder.bat  6_run_backtest.bat  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.txt  MANIFEST.in  README.md  README_EN.md  __init__.py  babel.cfg  build.bat  build.sh  extract_logger.py  hatch_build.py  hatch_build_tts.py  install.sh  install_ta_lib.bat  locales.bat  locales.sh  main.py  pyproject.toml  run.bat  run.sh  setup.py  test_tts_md_connection.py
.github/: dependabot.yml
bat/: 1_run_market_gateway.bat  2_run_order_gateway.bat  3_run_data_recorder.bat  3_run_strategy_subscriber.bat  4_run_risk_manager.bat  5_run_data_recorder.bat  5_run_strategy_engine.bat  5_run_strategy_engine.py.bat  5_run_strategy_subscriber.bat  6_run_backtest.bat  run_backtest.bat  run_data_recorder.bat  run_market_gateway.bat  run_order_gateway.bat  run_risk_manager.bat  run_strategy_engine.bat
config/: __init__.py  backtest_config.yaml  backtest_strategies_setting.json  dev_config.yaml  global_config.yaml  global_vars.py  prod_config.yaml  zmq_config.py
config/constants/: __init__.py  params.py  path.py
config/project_files/: 2024_holidays.json  2025_holidays.json  backtest_product_info.ini  exchange_id.json  instrument_exchange_id.json  product_info.ini  product_info1.ini
ctp/: __init__.py
demo/: __init__.py  backtesting_no_ui.py  connect_ctp.json  print_tick.py
google_translate/: __init__.py  trans.py  translate.py
locale/zh_CN/LC_MESSAGES/: messages.po
locales/: __init__.py  compile_translations_util.py  generate_pot.bat  generate_pot.sh  language.json  messages.pot  nilotica.pot  po_to_json_converter.py  po_to_json_converter_msgstr_null.py  translate_text_fill_util.py
locales/en/: test.json
locales/en/LC_MESSAGES/: messages.mo  messages.po
logger/: __init__.py
nilotica/en/LC_MESSAGES/: messages.po
structlog/: __init__.py
ta-lib/lib/: ta-lib-static.lib
translate/: __init__.py  translate.py
utils/: __init__.py  config_manager.py  config_models.py  converter.py  file_helper.py  i18n.py  service_common.py
utils/logger/: __init__.py
utils/path/: __init__.py  get_path.py
vnpy/: __init__.py
vnpy/alpha/: __init__.py  lab.py  logger.py
vnpy/alpha/dataset/: __init__.py  ta_function.py  template.py  ts_function.py  utility.py
vnpy/alpha/model/: __init__.py
vnpy/alpha/model/models/: lasso_model.py  lgb_model.py  mlp_model.py
vnpy/alpha/strategy/: __init__.py  backtesting.py  template.py
vnpy/alpha/strategy/strategies/: equity_demo_strategy.py
vnpy/chart/: __init__.py  axis.py  base.py  item.py  manager.py  widget.py
vnpy/event/: __init__.py  dedup_engine.py  engine.py
vnpy/rpc/: __init__.py  client.py  server.py
vnpy/trader/: app.py  constant.py  converter.py  database.py  datafeed.py  engine.py  gateway.py  logger.py  object.py  optimize.py  setting.py  utility.py
vnpy/trader/locale/: __init__.py  build_hook.py  generate_mo.bat  generate_pot.bat  vnpy.pot
vnpy_ctp/: __init__.py
vnpy_ctp/api/: __init__.py  vnctpmd.cp312-win_amd64.pyd  vnctpmd.pyi  vnctptd.cp312-win_amd64.pyd  vnctptd.pyi
vnpy_ctp/api/generator/: generate_api_functions.py  generate_data_type.py  generate_struct.py
vnpy_ctp/gateway/: __init__.py  ctp_gateway.py  ctp_gateway_helper.py  ctp_mapping.py
vnpy_rpcservice/: __init__.py
vnpy_rpcservice/rpc_gateway/: rpc_gateway.py
vnpy_rpcservice/rpc_service/: __init__.py
vnpy_tts/: __init__.py
vnpy_tts/api/: __init__.py  vnttsmd.cp312-win_amd64.pyd  vnttstd.cp312-win_amd64.pyd  vnttstd.pyi
vnpy_tts/gateway/: tts_gateway.py  tts_gateway_helper.py  tts_mapping.py
zmq_services/: config.py  data_recorder.py  log_print_test.py  market_data_gateway.py  order_execution_gateway.py  requirements.txt  risk_manager.py  rpc_client_test.py  run_data_recorder.py  run_market_gateway.py  run_order_gateway.py  run_risk_manager.py  run_strategy_engine.py  run_strategy_subscriber.py  strategy_base.py  strategy_engine.py  strategy_subscriber.py  zmq_base.py
zmq_services/backtester/: data_player.py  performance.py  run_backtest.py  run_data_player.py  simulation_engine.py
zmq_services/dev_recorded_data/: accounts_20250508.jsonl  gateway_logs_20250508.jsonl  orders_20250506.jsonl  orders_20250508.jsonl  trades_20250507.jsonl  trades_20250508.jsonl
zmq_services/recorded_data/: accounts_20250506.jsonl  accounts_20250508.jsonl  contracts_20250508.jsonl  gateway_logs_20250508.jsonl  orders_20250409.jsonl  orders_20250410.jsonl  orders_20250411.jsonl  orders_20250506.jsonl  orders_20250508.jsonl  ticks_20250410.jsonl  ticks_MA509_CZCE_20250507.jsonl  ticks_SA509_CZCE_20250507.jsonl  ticks_rb2510_SHFE_20250507.jsonl  trades_20250409.jsonl  trades_20250410.jsonl  trades_20250411.jsonl  trades_20250506.jsonl  trades_20250508.jsonl
zmq_services/strategies/: sa509_strategy.py  threshold_strategy.py
