[project]
name = "nilotica_dev"
version = "0.1.0"
description = "一个基于vnpy的量化系统(Based vnpy quant trading system.)"
license = "Apache-2.0"
license-files = ["LICEN[CS]E.*"]
authors = [{ name = "Donny", email = "donnymoving@gmail.com" }]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: Chinese (Simplified)",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "deap==1.4.1",
    "importlib-metadata>=8.6.1",
    "msgpack>=1.1.0",
    "numpy==1.26.4",
    "pathlib>=1.0.1",
    "peewee>=3.17.9",
    "pip>=25.0.1",
    "plotly==5.20.0",
    "pybind11>=2.13.6",
    "pybind11-stubgen>=2.5.3",
    "pyqtgraph==0.13.4",
    "pyside6==6.3.0",
    "pyzmq==25.1.2",
    "qdarkstyle==3.2.3",
    "seaborn==0.13.2",
    "setuptools>=78.1.0",
    "tqdm==4.66.3",
    "tushare>=1.4.21",
    "tzlocal==5.2",
    "wheel>=0.45.1",
]

keywords = ["quant", "quantitative", "trading", "nilotica", "investment"]

[project.urls]
"Homepage" = "https://github.com/Nilotica/nilotica_dev"
"Documentation" = "https://github.com/Nilotica/nilotica_dev/README.md"
"Repository" = "https://github.com/Nilotica/nilotica_dev.git"
"Issues" = "https://github.com/Nilotica/nilotica_dev/issues"
"Changelog" = "https://github.com/Nilotica/nilotica_dev/CHANGELOG.md"
"Source" = "https://github.com/Nilotica/nilotica_dev"

[build-system]
requires = [
    "setuptools",
    "wheel",
    "pybind11",
    "pybind11-stubgen"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files = ["setup.py"]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
